------------------------------------------------------------------------
r1866 | vapier | 2007-10-17 22:18:19 -0400 (Wed, 17 Oct 2007) | 1 line

add an option to use the VMAs rather than the LMAs when generating addresses
------------------------------------------------------------------------
r1865 | vapier | 2007-10-15 10:10:32 -0400 (Mon, 15 Oct 2007) | 1 line

skip weak symbols
------------------------------------------------------------------------
r1864 | vapier | 2007-10-15 00:22:01 -0400 (Mon, 15 Oct 2007) | 1 line

dont sleep on the very last block
------------------------------------------------------------------------
r1860 | vapier | 2007-10-11 13:29:59 -0400 (Thu, 11 Oct 2007) | 1 line

disable backtraces during testing
------------------------------------------------------------------------
r1859 | vapier | 2007-10-11 13:25:11 -0400 (Thu, 11 Oct 2007) | 1 line

add support for dumping a backtrace upon error
------------------------------------------------------------------------
r1858 | vapier | 2007-10-11 13:23:59 -0400 (Thu, 11 Oct 2007) | 1 line

set delay during testing to 0
------------------------------------------------------------------------
r1856 | vapier | 2007-10-11 12:11:15 -0400 (Thu, 11 Oct 2007) | 1 line

set uart boot to true for bf52x as reported by michael hennerich
------------------------------------------------------------------------
r1853 | vapier | 2007-10-10 19:06:59 -0400 (Wed, 10 Oct 2007) | 1 line

allow people to specify a file to stick into the hole punched into the LDR
------------------------------------------------------------------------
r1852 | vapier | 2007-10-10 11:52:58 -0400 (Wed, 10 Oct 2007) | 1 line

treat input values first as ints rather than hex
------------------------------------------------------------------------
r1851 | vapier | 2007-10-10 11:41:02 -0400 (Wed, 10 Oct 2007) | 1 line
