@@ -7,10 +7,10 @@ PACKAGE_VERSION   = $(shell ../local-version.sh)
 PACKAGE_STRING    = $(PACKAGE_NAME) $(PACKAGE_VERSION)
 PACKAGE_BUGREPORT = toolchain-devel@blackfin.uclinux.org
 
-abs_builddir = $(shell echo $$PWD)
-abs_top_builddir = $(abs_builddir)/..
-abs_srcdir = $(abs_builddir)
-abs_top_srcdir = $(abs_top_builddir)
+export abs_builddir = $(shell echo $$PWD)
+export abs_top_builddir = $(abs_builddir)/..
+export abs_srcdir = $(abs_builddir)
+export abs_top_srcdir = $(abs_top_builddir)
 
 CFLAGS ?= -g -O2
 CFLAGS += -Wall
@@ -18,12 +18,17 @@ CFLAGS += -Wall
 all: check
 
 atlocal: Makefile atlocal.in
-	sed \
-		-e 's:@abs_top_builddir@:$(abs_top_builddir):g' \
-		-e 's:@abs_builddir@:$(abs_builddir):g' \
-		-e 's:@abs_top_srcdir@:$(abs_top_srcdir):g' \
-		-e 's:@abs_srcdir@:$(abs_srcdir):g' \
-		atlocal.in > atlocal
+	cp atlocal.in atlocal
+
+atconfig: Makefile
+	rm -f atconfig.tmp
+	set -e ; \
+	for v in abs_builddir abs_top_builddir abs_srcdir abs_top_srcdir ; do \
+		val=`eval echo \\$$$${v}` ; \
+		echo "$$v=$$val" >> atconfig.tmp ; \
+	done
+	cmp -s atconfig atconfig.tmp || mv atconfig.tmp atconfig
+	rm -f atconfig.tmp
 
 package.m4: Makefile package.m4.in
 	sed \
@@ -37,7 +42,7 @@ package.m4: Makefile package.m4.in
 TEST_PROGS = fake-loadee
 fake-loadee: LDLIBS += -lutil
 
-testsuite: atlocal package.m4 $(wildcard *.at */*.at)
+testsuite: atconfig atlocal package.m4 $(wildcard *.at */*.at)
 	$(AUTOTEST) -o $@.tmp $@.at
 	mv $@.tmp $@
 
