@@ -1,14 +1,15 @@
-EXTRA_DIST = fake-loadee.c atlocal.in Makefile.in package.m4.in elfs/bad.elf elfs/bss.elf elfs/POST.dxe elfs/section.elf ldrs/bf548.ldr ldrs/spi.ldr ldrs/uart.ldr $(AT_FILES) $(TESTSUITE)
+EXTRA_DIST = fake-loadee.c Makefile.in atlocal.in package.m4.in elfs/POST.dxe elfs/bad.elf elfs/bss.elf elfs/section.elf ldrs/bf548.ldr ldrs/spi.ldr ldrs/uart.ldr $(AT_FILES) $(TESTSUITE)
 AT_FILES = create.at dump.at load.at local.at show.at testsuite.at usage.at
 TESTSUITE = $(srcdir)/testsuite
+DISTCLEANFILES = atconfig
 
-noinst_PROGRAMS = fake-loadee
+check_PROGRAMS = fake-loadee
 fake_loadee_LDADD = -lutil
 
-check-local: atlocal fake-loadee $(TESTSUITE)
+check-local: atconfig atlocal $(TESTSUITE)
 	$(SHELL) '$(TESTSUITE)' $(TESTSUITEFLAGS)
 
-installcheck-local: atlocal fake-loadee $(TESTSUITE)
+installcheck-local: atconfig atlocal $(TESTSUITE)
 	$(SHELL) '$(TESTSUITE)' AUTOTEST_PATH='$(bindir)' $(TESTSUITEFLAGS)
 
 clean-local:
