@@ -1,4 +1,8 @@
 ------------------------------------------------------------------------
+r1873 | vapier | 2007-11-02 00:35:44 -0400 (Fri, 02 Nov 2007) | 1 line
+
+initial cut at optional autotoolization
+------------------------------------------------------------------------
 r1866 | vapier | 2007-10-17 22:18:19 -0400 (Wed, 17 Oct 2007) | 1 line
 
 add an option to use the VMAs rather than the LMAs when generating addresses
